# HiveMind

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  THIRD-PARTY-NOTICES.md  lgtm.yml  package.xml  run-clang-format.py
src/: CMakeLists.txt  HardwareTests.cpp  Main.cpp  freertos_hook.cpp  main.c  main.cpp
src/application-interface/: CMakeLists.txt
src/application-interface/include/application-interface/: ApplicationInterface.h  ApplicationInterfaceContainer.h  ApplicationStates.h  ButtonCallbackRegister.h  ConnectionStateUI.h  DeviceStateUI.h  HostHandshakeUI.h  IApplicationInterface.h  IButtonCallbackRegister.h  IConnectionStateUI.h  IDeviceStateUI.h  IHandshakeUI.h  IUserUI.h  RemoteHandshakeUI.h  SystemStates.h  UserStates.h  UserUI.h
src/application-interface/src/: ApplicationInterface.cpp  ApplicationInterfaceContainer.cpp  ButtonCallbackRegister.cpp  ConnectionStateUI.cpp  DeviceStateUI.cpp  HostHandshakeUI.cpp  RemoteHandshakeUI.cpp  UserUI.cpp
src/application-interface/tests/: ApplicationInterfaceTests.cpp  ApplicationInterfaceUnitTests.cpp  ButtonCallbackRegisterUnitTests.cpp  CMakeLists.txt  ConnectionStateUIUnitTests.cpp  DeviceStateUIUnitTests.cpp  HostHandshakeUIUnitTests.cpp  RemoteHandshakeUIUnitTests.cpp  UserUIUnitTests.cpp
src/application-interface/tests/mocks/: ApplicationInterfaceMock.h  MutexInterfaceMock.h  UserInterfaceMock.h
src/bittybuzz/: CMakeLists.txt  bittybuzz.bst  bittybuzz_config.cmake
src/bittybuzz/buzz_scripts/: blinky.bzz  blinky_swarm.bzz  executor.bzz  follow_leader.bzz  main.bzz  move_by.bzz  onconflict.bzz  stigmergy.bzz  teleop.bzz  test.bzz  testing.bzz  user_bst_files.cmake
src/bittybuzz/buzz_scripts/behaviors/: blinky.bzz  follow_leader.bzz  get_host_status.bzz  hex_leader.bzz  hexagon.bzz  led_sync.bzz  move_by.bzz  onconflict.bzz  simulation_functions.bzz  square.bzz  stigmergy.bzz  time_loop.bzz
src/bittybuzz/buzz_scripts/utils/: executor.bst  executor.bzz  types.bzz
src/bittybuzz/include/: bittybuzzsymbols.h
src/bittybuzz/include/bittybuzz/: BittyBuzz.cpp  BittyBuzz.h  BittyBuzzByteCode.h  BittyBuzzBytecode.h  BittyBuzzClosureRegister.h  BittyBuzzContainer.h  BittyBuzzFactory.h  BittyBuzzFunctionDescription.h  BittyBuzzFunctionRegister.h  BittyBuzzLib.h  BittyBuzzLib.tpp  BittyBuzzLibMemberRegister.h  BittyBuzzMathFunctions.h  BittyBuzzMessageHandler.h  BittyBuzzMessageService.h  BittyBuzzNeighborsManager.h  BittyBuzzSettings.in.h  BittyBuzzStdLib.h  BittyBuzzStringResolver.h  BittyBuzzSystem.h  BittyBuzzUIFunctions.h  BittyBuzzUserFunctionRegister.h  BittyBuzzUserFunctions.h  BittyBuzzUtils.h  BittyBuzzVm.h  BittyBuzzVm.tpp  IBittyBuzzByteCode.h  IBittyBuzzBytecode.h  IBittyBuzzClosureRegister.h  IBittyBuzzFunctionRegister.h  IBittyBuzzLib.h  IBittyBuzzMathFunctions.h  IBittyBuzzMessageHandler.h  IBittyBuzzMessageService.h  IBittyBuzzNeighborsManager.h  IBittyBuzzStdLib.h  IBittyBuzzStringResolver.h  IBittyBuzzVm.h
src/bittybuzz/src/: BittyBuzz.cpp  BittyBuzzByteCode.cpp  BittyBuzzBytecode.cpp  BittyBuzzClosureRegister.cpp  BittyBuzzContainer.cpp  BittyBuzzFactory.cpp  BittyBuzzFunctionDescription.cpp  BittyBuzzFunctionRegister.cpp  BittyBuzzLib.cpp  BittyBuzzLibMemberRegister.cpp  BittyBuzzMathFunctions.cpp  BittyBuzzMessageHandler.cpp  BittyBuzzMessageService.cpp  BittyBuzzNeighborsManager.cpp  BittyBuzzStdLib.cpp  BittyBuzzStringResolver.cpp  BittyBuzzSystem.cpp  BittyBuzzUIFunctions.cpp  BittyBuzzUserFunctionRegister.cpp  BittyBuzzUserFunctions.cpp  BittyBuzzUtils.cpp  BittyBuzzVm.cpp  bittybuzz.cpp
src/bittybuzz/src/private/: BittyBuzzSystem.cpp  BittyBuzzUserFunctions.cpp
src/bittybuzz/tests/: BittyBuzzBytecodeUnitTests.cpp  BittyBuzzClosureRegisterUnitTests.cpp  BittyBuzzFunctionDescriptionUnitTests.cpp  BittyBuzzFunctionRegisterUnitTests.cpp  BittyBuzzMessageHandlerUnitTests.cpp  BittyBuzzMessageServiceUnitTests.cpp  BittyBuzzNeighborsManagerUnitTests.cpp  BittyBuzzStringResolverUnitTests.cpp  CMakeLists.txt
src/bittybuzz/tests/mocks/: BSPInterfaceMock.h  BittyBuzzBytecodeInterfaceMock.h  BittyBuzzClosureRegisterInterfaceMock.h  BittyBuzzFunctionRegisterInterfaceMock.h  BittyBuzzMessageHandlerInterfaceMock.h  BittyBuzzMessageServiceInterfaceMock.h  BittyBuzzNeighborsManagerInterfaceMock.h  BittyBuzzStringResolverInterfaceMock.h  CircularQueueInterfaceMock.h  InterlocInterfaceMock.h  (+3 more)
src/bsp/: CMakeLists.txt
src/bsp/include/: bsp.h
src/bsp/src/: CMakeLists.txt  TCPClientWrapper.cpp
src/bsp/tests/: CMakeLists.txt
src/comm/: CMakeLists.txt
src/comm/src/: TCPDataStream.cpp
src/comm/tests/: CMakeLists.txt
src/freertos/: CMakeLists.txt  freertos_hook.cpp  freertos_hooks.c
src/hardware-tests/: CMakeLists.txt  DecawaveTests.cpp  DecawaveTxTest.cpp  HardwareTests.cpp
src/interloc/: CMakeLists.txt  DefaultSettings.cmake
src/interloc/src/: Interloc.cpp  InterlocContainer.cpp  InterlocMessageHandler.cpp
src/interloc/tests/: CMakeLists.txt  InterlocMessageHandlerUnitTests.cpp  InterlocUnitTests.cpp
src/logger/: CMakeLists.txt
src/logger/src/: Logger.cpp  LoggerContainer.cpp  logger_impl.cpp
src/logger/tests/: CMakeLists.txt  LoggerUnitTests.cpp  logger_unittests.cpp
src/logging/: CMakeLists.txt
src/logging/src/: logger.cpp
src/logging/tests/: CMakeLists.txt  logger_unittest.cpp  logger_unittests.cpp
src/message-handler/: CMakeLists.txt
src/message-handler/src/: Greet.cpp  GreetHandler.cpp  GreetSender.cpp  HiveConnectHiveMindApiMessageHandler.cpp  HiveMindApiRequestHandler.cpp  HiveMindHostApiRequestHandler.cpp  MessageDispatcher.cpp  MessageHandler.cpp  MessageHandlerContainer.cpp  MessageSender.cpp
src/message-handler/tests/: CMakeLists.txt  GreetHandlerUnitTests.cpp  GreetSenderUnitTests.cpp  HiveConnectHiveMindApiMessageHandlerUnitTests.cpp  HiveMindApiHostRequestHandlerUnitTests.cpp  HiveMindApiRequestHandlerUnitTests.cpp  HiveMindHostApiRequestHandlerUnitTests.cpp  MessageDispatcherUnitTests.cpp  MessageSenderUnitTests.cpp
src/os/: CMakeLists.txt
src/os/freertos/: CMakeLists.txt  freertos_hooks.c
src/os/posix/: CMakeLists.txt
(+3193 files in other folders)
